user-crud added

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="footer">
-  <span class="footer-text">© 2025 Your Company Name</span>
+  <span class="footer-text">© 2025 | Designed and Developed by Ahetesham Shaikh</span>
   <span class="spacer"></span>
   <a mat-button href="/privacy">Privacy</a>
   <a mat-button href="/terms">Terms</a>
