--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -10,3 +10,16 @@
   top: 0;
   z-index: 1000;
 }
+.profile-button {
+  padding: 0;
+  min-width: 0;
+  border-radius: 50%;
+  margin-left: 8px;
+}
+
+.profile-image {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
