profile page added

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -21,12 +21,13 @@
   </button>
 
   <mat-menu #menu="matMenu">
-    <div class="user-name" mat-menu-item>
+    <div class="user-name text-primary" mat-menu-item>
     {{ userName }}
   </div>
   <mat-divider></mat-divider>
-    <button mat-menu-item>Settings</button>
-    <button mat-menu-item>Logout</button>
+  <button mat-menu-item><mat-icon>account_circle</mat-icon>Profile</button>
+    <button mat-menu-item><mat-icon>settings</mat-icon>Settings</button>
+    <button mat-menu-item><mat-icon>logout</mat-icon> Logout</button>
   </mat-menu>
 
 </mat-toolbar>
