--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -20,6 +20,13 @@
         </div>
       </a>
 
+      <a mat-list-item routerLink="/profile" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">
+        <div class="menu-item">
+          <mat-icon>account_circle</mat-icon>
+        My Profile
+        </div>
+      </a>
+
       <a mat-list-item routerLink="/settings" routerLinkActive="active-link"
         [routerLinkActiveOptions]="{ exact: true }">
         <div class="menu-item">
