profile page updated

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -53,18 +53,65 @@
           </div>
         </mat-card-content>
       </mat-card>
-      <mat-card appearance="outlined">
+      <mat-card appearance="outlined" class="mb-3">
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
-              <h6 class="card-title mb-2">About Me</h6>
-          <p class="card-text">
-            I am a passionate frontend developer with a keen interest in creating beautiful and functional user
-            interfaces. I have experience in various frontend technologies and frameworks, and I am always eager to
-            learn and improve my skills.
-          </p>
+              <h6 class="card-title mb-2 text-primary">About Me:</h6>
+              <p class="card-text">
+                I am a passionate frontend developer with a keen interest in creating beautiful and functional user
+                interfaces. I have experience in various frontend technologies and frameworks, and I am always eager to
+                learn and improve my skills.
+              </p>
+            </div>
+            <div class="col-md-12 mt-3">
+              <h6 class="card-title text-primary mb-2">Technologies:</h6>
+              <mat-chip-set aria-label="tech">
+                <mat-chip><img matChipAvatar src="/img/linkedin.png"> Angular</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/linkedin.png"> Typescript</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/linkedin.png"> Javascript</mat-chip>
+              </mat-chip-set>
             </div>
           </div>
+        </mat-card-content>
+      </mat-card>
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6">
+      <mat-card appearance="outlined" class="mb-3">
+        <mat-card-content>
+          <h6 class="card-title mb-2 text-primary">Education:</h6>
+
+          <h6 class="card-title mt-3 text-muted">Highest Qualification:</h6>
+          <p class="card-text">
+            Master in Computer Application. <small>(2015 - 2017)</small>
+          </p>
+        </mat-card-content>
+        <mat-card-content>
+          <h6 class="card-title mt-3 text-muted">Graduation:</h6>
+          <p class="card-text">
+            B.Sc in Computer Science. <small>(2012 - 2015)</small>
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col-lg-6">
+      <mat-card appearance="outlined" class="mb-3">
+        <mat-card-content>
+          <h6 class="card-title mb-2 text-primary">Experience:</h6>
+
+          <h6 class="card-title mt-3 text-muted">Angular Developer:</h6>
+          <p class="card-text">
+            LearningMate, Mumbai. <small>(December 2022 - November 2023)</small>
+          </p>
+        </mat-card-content>
+        <mat-card-content>
+          <h6 class="card-title mt-3 text-muted">Frontend Developer:</h6>
+          <p class="card-text">
+            7tech IT Service Pvt. Ltd. <small>(October 2017 to November 2021)</small>
+          </p>
         </mat-card-content>
       </mat-card>
     </div>
