Add new images and enhance login/signup components with improved layout and self-rating features

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -64,13 +64,39 @@
                 learn and improve my skills.
               </p>
             </div>
-            <div class="col-md-12 mt-3">
+            <div class="col-md-6 col-sm-12 mt-3">
               <h6 class="card-title text-primary mb-2">Technologies:</h6>
               <mat-chip-set aria-label="tech">
-                <mat-chip><img matChipAvatar src="/img/linkedin.png"> Angular</mat-chip>
-                <mat-chip><img matChipAvatar src="/img/linkedin.png"> Typescript</mat-chip>
-                <mat-chip><img matChipAvatar src="/img/linkedin.png"> Javascript</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/angular.png"> Angular</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/ts.png"> Typescript</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/js.png"> Javascript</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/html.png"> HTML5</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/css.png"> CSS3</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/bootstrap.png"> Bootstrap</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/api.png"> REST API</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/json.png"> JSON</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/figma.png"> Figma</mat-chip>
+                <mat-chip><img matChipAvatar src="/img/photoshop.png"> Photoshop</mat-chip>
               </mat-chip-set>
+            </div>
+            <div class="col-md-6 col-sm-12 mt-3">
+              <h6 class="card-title text-primary mb-2">Self Ratings:</h6>
+              <div class="mb-3">
+                <div class="progress-label-text">Angular: 80%</div>
+                <mat-progress-bar mode="determinate" [value]="80"></mat-progress-bar>
+              </div>
+              <div class="mb-3">
+                <div class="progress-label-text">Typescript/Javascript: 70%</div>
+                <mat-progress-bar mode="determinate" [value]="70"></mat-progress-bar>
+              </div>
+              <div class="mb-3">
+                <div class="progress-label-text">Bootstrap: 80%</div>
+                <mat-progress-bar mode="determinate" [value]="80"></mat-progress-bar>
+              </div>
+               <div class="mb-3">
+                <div class="progress-label-text">HTML/CSS: 85%</div>
+                <mat-progress-bar mode="determinate" [value]="85"></mat-progress-bar>
+              </div>
             </div>
           </div>
         </mat-card-content>
