--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -27,3 +27,8 @@ mat-card:hover{
   cursor: pointer;
   border: 0.5px solid #2196f3;
 }
+.progress-label-text {
+  margin-bottom: 4px;
+  font-size: 14px;
+  font-weight: 500;
+}
