--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,61 +1,63 @@
-<mat-grid-list cols="2" rowHeight="100%">
-  <mat-grid-tile>
-    <img src="/img/login.png" class="login-bg" alt="Login Image" />
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card appearance="outlined">
-      <mat-card-header>
-        <mat-card-title> Login</mat-card-title>
-      </mat-card-header>
-      <form class="example-form" [formGroup]="loginFrm" (ngSubmit)="onLogin()">
-        <mat-card-content>
+<div class="container-fluid vh-100 p-0">
+  <div class="row h-100">
 
-          <mat-form-field class="example-full-width">
-            <mat-label>Email:</mat-label>
-            <input matInput placeholder="john@gmail.com" formControlName="email" required/>
-            <mat-error *ngIf="loginFrm.get('email')?.hasError('required')">
-              Email is required
-            </mat-error>
-            <mat-error *ngIf="loginFrm.get('email')?.hasError('email')">
-              Enter a valid email
-            </mat-error>
-          </mat-form-field>
+    <!-- Left Section: Image (Hidden on small screens) -->
+    <div class="col-md-6 d-none d-md-flex align-items-center justify-content-center bg-light">
+      <img src="/img/login.png" class="img-fluid login-bg " alt="Login Image" />
+    </div>
 
-          <mat-form-field class="example-full-width">
-            <mat-label>Password:</mat-label>
-            <input matInput placeholder="123@abc" [type]="hide ? 'password' : 'text'" formControlName="password" required/>
-            <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    <!-- Right Section: Login Card -->
+    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+      <mat-card appearance="outlined" style="width: 100%; max-width: 400px;">
+        <mat-card-header>
+          <mat-card-title> Login</mat-card-title>
+        </mat-card-header>
+        <form class="example-form" [formGroup]="loginFrm" (ngSubmit)="onLogin()">
+          <mat-card-content>
 
-            <mat-error *ngIf="loginFrm.get('password')?.hasError('required')">
-              Password is required
-            </mat-error>
-          </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <mat-label>Email:</mat-label>
+              <input matInput placeholder="john@gmail.com" formControlName="email" required />
+              <mat-error *ngIf="loginFrm.get('email')?.hasError('required')">
+                Email is required
+              </mat-error>
+              <mat-error *ngIf="loginFrm.get('email')?.hasError('email')">
+                Enter a valid email
+              </mat-error>
+            </mat-form-field>
 
-          <section class="example-section">
-            <mat-checkbox class="example-margin" formControlName="isRemember">Remember me!</mat-checkbox>
-          </section>
-        </mat-card-content>
+            <mat-form-field class="example-full-width">
+              <mat-label>Password:</mat-label>
+              <input matInput placeholder="123@abc" [type]="hide ? 'password' : 'text'" formControlName="password"
+                required />
+              <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
 
-        <mat-card-actions align="end">
-          <button type="submit" mat-flat-button [disabled]="loginFrm.invalid || isLoading">
-            <ng-container *ngIf="!isLoading; else loading">
-              Login
-            </ng-container>
-            <ng-template #loading>
-              <mat-progress-spinner
-                diameter="24"
-                mode="indeterminate"
-                color="accent"
-                style="width: 24px; height: 24px;"
-                strokeWidth="3">
-              </mat-progress-spinner>
-            </ng-template>
-          </button>
+              <mat-error *ngIf="loginFrm.get('password')?.hasError('required')">
+                Password is required
+              </mat-error>
+            </mat-form-field>
 
-          <!-- <button type="button" mat-flat-button routerLink="/dashboard">Login</button> -->
-          <button type="button" mat-button routerLink="/signup">Signup</button>
-        </mat-card-actions>
-      </form>
-    </mat-card>
-    </mat-grid-tile>
-</mat-grid-list>
+            <section class="example-section">
+              <mat-checkbox class="example-margin" formControlName="isRemember">Remember me!</mat-checkbox>
+            </section>
+          </mat-card-content>
+
+          <mat-card-actions align="end">
+            <button type="submit" mat-flat-button [disabled]="loginFrm.invalid || isLoading">
+              <ng-container *ngIf="!isLoading; else loading">
+                Login
+              </ng-container>
+              <ng-template #loading>
+                <mat-progress-spinner diameter="24" mode="indeterminate" color="accent"
+                  style="width: 24px; height: 24px;" strokeWidth="3">
+                </mat-progress-spinner>
+              </ng-template>
+            </button>
+            <button type="button" mat-button routerLink="/signup">Signup</button>
+          </mat-card-actions>
+        </form>
+      </mat-card>
+    </div>
+
+  </div>
+</div>
