--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,21 +1,21 @@
 mat-grid-tile {
   background-color: #fff;
 }
+.login-bg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 mat-card {
   border: 2px solid #005cbb;
   border-radius: 8px;
   box-shadow: 0 12px 10px rgba(0, 0, 0, 0.1);
 }
-.login-bg{
-  width: 100%; height: 100%; object-fit: cover;
-}
-
 .example-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
 }
-
 .example-full-width {
   width: 100%;
   margin-bottom: 10px;
