Add bg-light class for card background styling in dashboard and global styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,9 @@ body {
 .text-white {
   color: #fff !important;
 }
+.bg-light{
+  background-color: #fff !important;
+}
 
 /* Global Grid System */
 
