--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -51,14 +51,14 @@
 <div class="container-fluid" *ngIf="showChart">
   <div class="row">
     <div class="col-md-6">
-        <mat-card appearance="outlined">
+        <mat-card appearance="outlined" class="bg-light">
     <mat-card-content>
       <canvasjs-chart #chart1 [options]="multiSeriesChart" style="width: 100%; height: 360px; overflow: hidden;"></canvasjs-chart>
     </mat-card-content>
   </mat-card>
     </div>
     <div class="col-md-6">
-       <mat-card appearance="outlined">
+       <mat-card appearance="outlined" class="bg-light">
     <mat-card-content>
       <canvasjs-chart #chart2 [options]="chartOptions" style="width: 100%; height: 360px; overflow: hidden;"></canvasjs-chart>
     </mat-card-content>
