--- a/src/app/components/users/user-list/user-list.component.html
+++ b/src/app/components/users/user-list/user-list.component.html
@@ -1,6 +1,11 @@
 <mat-card appearance="outlined">
   <mat-card-content>
     <div class="mat-elevation-z8">
+      <mat-form-field>
+        <mat-label>Search</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="search here..." #input>
+      </mat-form-field>
+
       <table mat-table [dataSource]="dataSource">
 
         <!-- id Column -->
@@ -63,6 +68,13 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="7" style="text-align: center;">
+            <h6 class="py-2">No data found</h6>
+          </td>
+        </tr>
+
       </table>
 
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
